code-conversion - added layout settings interface

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,6 @@
 browserify https://dontkry.com/posts/code/using-npm-on-the-client-side.html
 
 install bluebird
+
+add click listeners
+html handlebars
